backend/deploy/k8s/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend-route
  namespace: pool
spec:
  parentRefs:
    - name: pool-gateway
  hostnames:
    - "api.xxx.xxx.xxx.xxx.nip.io" # get EXTERNAL-IP from traefik url attribution in cluster
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: backend
          port: 80
